Started on About page. Need to fix background image on About. Made .text shift in and out by opacity, not text.

--- a/css/style.css
+++ b/css/style.css
@@ -131,11 +131,18 @@ header .navigation .tab.active:hover {
     width: 100%;
     position: fixed;
 
+    background-repeat: no-repeat;
+
 }
 
-.menubackground {
+.menu-background {
     background: url("../images/menubackground.jpg");
     background-position: center left;
+}
+
+.about-background {
+    background: url("../images/truck2.jpg");
+    background-position: center center;
 }
 
 .imageoverlay {
